--- a/src/styles/globals.css
+++ b/src/styles/globals.css
@@ -5,7 +5,7 @@
 }
 
 :root {
-	--color01: rgb(0, 0, 0);
+	--color01: #000000;
 	--color02: #7d7d7d;
 	--color03: #e5e5e5;
 	--color04: #f3f3f3;
@@ -19,3 +19,34 @@ html {
 body {
 	background-color: var(--color05);
 }
+
+*::-webkit-scrollbar {
+  height: 10px;
+  width: 10px;
+}
+*::-webkit-scrollbar-track {
+  border-radius: 5px;
+  background-color: #DFE9EB;
+}
+
+*::-webkit-scrollbar-track:hover {
+  background-color: #B8C0C2;
+}
+
+*::-webkit-scrollbar-track:active {
+  background-color: #B8C0C2;
+}
+
+*::-webkit-scrollbar-thumb {
+  border-radius: 5px;
+  background-color: #000000;
+}
+
+*::-webkit-scrollbar-thumb:hover {
+  background-color: #7D7D7D;
+}
+
+*::-webkit-scrollbar-thumb:active {
+  background-color: #7D7D7D;
+}
+
